<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/image_view"/>
    <TextView
        style="@style/titulo.grande"
        android:id="@+id/tCatedral"
        android:text="@string/catedral"
         />

    <TextView
        style="@style/titulo.grande"
        android:id="@+id/tMirador"
        android:text="@string/mirador"
        />
    <TextView
        style="@style/titulo.grande"
        android:id="@+id/tRonda"
        android:text="@string/ronda"
         />
    <TextView
        style="@style/texto.peq"
        android:id="@+id/tinfCatedral"
        android:text="@string/infcatedral"
       />

    <TextView
        style="@style/texto.peq"
        android:id="@+id/tinfMirador"
        android:text="@string/infmirador"
         />
    <TextView
        style="@style/texto.peq"
        android:id="@+id/tinfRonda"
        android:text="@string/infronda"
         />
        </LinearLayout>
    </ScrollView>
</LinearLayout>